--- a/docs/source/examples.buildcell.ipynb
+++ b/docs/source/examples.buildcell.ipynb
@@ -33,10 +33,7 @@
     "inputs = range(20)\n",
     "outputspec = OutputSpec('buildcell_output.xyz')\n",
     "\n",
-    "input_file = 'buildcell_input.cell'\n",
-    "create_input(z=13, vol_per_atom=10, bond_lengths=2, filename=input_file)\n",
-    "with open(input_file, 'r') as fo:\n",
-    "    buildcell_input = fo.read()\n",
+    "buildcell_input = create_input(z=13, vol_per_atom=10, bond_lengths=2)\n",
     "\n",
     "run(inputs=inputs,\n",
     "    outputs=outputspec,\n",
