added test for examples.buildcell.ipynb

--- a/docs/source/examples.buildcell.ipynb
+++ b/docs/source/examples.buildcell.ipynb
@@ -26,6 +26,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "from wfl.generate.buildcell import create_input, run\n",
     "from wfl.configset import OutputSpec\n",
     "\n",
@@ -39,7 +41,9 @@
     "    outputs=outputspec,\n",
     "    buildcell_input=buildcell_input,\n",
     "    buildcell_cmd='buildcell',\n",
-    "    )"
+    "    )\n",
+    "\n",
+    "assert os.path.exists(outputspec.files[0]), f'{outputspec.files[0]} not found!'"
    ]
   }
  ],
