in examples.dimers.ipynb made assert part a separate block and adding flag to hide in only documentation

--- a/docs/source/examples.dimers.ipynb
+++ b/docs/source/examples.dimers.ipynb
@@ -38,8 +38,19 @@
     "    atomic_numbers=[1, 8],\n",
     "    bond_lengths={1: 0.74, 8:1.21},\n",
     "    do_isolated_atoms=False,\n",
-    "    )\n",
-    "\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "722d2dc2-7619-4e7f-a7d0-eeb5c4f8b9a1",
+   "metadata": {
+    "nbsphinx": "hidden",
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "dimer_combinations = set(['-'.join(dimer_i.get_chemical_symbols()) for dimer_i in outputs])\n",
     "assert dimer_combinations == {'H-H', 'H-O', 'O-O'}, \\\n",
     "       f\"Obtained dimer combinations {sorted(dimer_combinations)}, expected {sorted({'H-H', 'H-O', 'O-O'})}\""
