All relevant files now in docs

--- a/docs/source/examples.select_fps.ipynb
+++ b/docs/source/examples.select_fps.ipynb
@@ -17,8 +17,9 @@
     "\n",
     "To assign a per-config descriptor we calculate the average SOAP vector for every frame in the MD trajectory. The greedy-FPS algorithm would use them to measure similarities across the datapoints and select 10 unique structures. \n",
     "\n",
-    "Overall this requires two input files: the database and the descriptors (\"md.xyz\" and \"params.yaml\")\n",
-    "Tip: params.yaml can either be self-written or automatically generated from a template processed by multi-stage gap fit (wfl.fit.gap.multistage)"
+    "Overall this requires two input files: the database and the descriptors (\"md.traj\" and \"params.yaml\")\n",
+    "\n",
+    "Tip: params.yaml can either be self-written or automatically generated from a \"Univeral_SOAP-template\" processed by multi-stage gap fit (see wfl.fit.gap.multistage)"
    ]
   },
   {
@@ -30,7 +31,7 @@
     {
      "data": {
       "text/plain": [
-       "<wfl.configset.ConfigSet at 0x7f8318b654c0>"
+       "<wfl.configset.ConfigSet at 0x7fda092fc550>"
       ]
      },
      "execution_count": 1,
@@ -44,7 +45,7 @@
     "from wfl.descriptors.quippy import calc as calc_descriptors\n",
     "from wfl.select.by_descriptor import greedy_fps_conf_global as get_fps\n",
     "\n",
-    "work_dir = os.path.join(os.path.dirname(wfl.__file__), \"../examples/select_fps\") # Location of I/O files\n",
+    "work_dir = \"examples_files/select_fps\" # Location of I/O files\n",
     "\n",
     "# Step 1: Assign descriptors to the database\n",
     "md        = ConfigSet(os.path.join(work_dir, \"md.traj\"))\n",
