--- a/docs/source/examples.select_fps.ipynb
+++ b/docs/source/examples.select_fps.ipynb
@@ -34,7 +34,7 @@
     "from wfl.descriptors.quippy import calc as calc_descriptors\n",
     "from wfl.select.by_descriptor import greedy_fps_conf_global as get_fps\n",
     "\n",
-    "work_dir = \"examples_files/select_fps\" # Location of I/O files\n",
+    "work_dir = os.path.join(os.path.dirname(wfl.__file__), \"../docs/source/examples_files/select_fps\") # Location of I/O files\n",
     "\n",
     "# Step 1: Assign descriptors to the database\n",
     "md        = ConfigSet(os.path.join(work_dir, \"md.traj\"))\n",
