--- a/docs/source/examples.select_fps.ipynb
+++ b/docs/source/examples.select_fps.ipynb
@@ -35,24 +35,23 @@
     "from wfl.descriptors.quippy import calc as calc_descriptors\n",
     "from wfl.select.by_descriptor import greedy_fps_conf_global\n",
     "\n",
-    "work_dir = pathlib.Path(wfl.__file__).parents[1].joinpath(\"docs/source/examples_files/select_fps\")\n",
+    "work_dir = pathlib.Path(wfl.__file__).parents[1]/\"docs/source/examples_files/select_fps\"\n",
     "\n",
     "# Step 1: Assign descriptors to the database\n",
-    "md        = ConfigSet(work_dir.joinpath(\"md.traj\"))\n",
-    "md_desc   = OutputSpec(files=work_dir.joinpath(\"md_desc.xyz\"))\n",
+    "md        = ConfigSet(work_dir/\"md.traj\")\n",
+    "md_desc   = OutputSpec(files=work_dir/\"md_desc.xyz\")\n",
     "\n",
-    "with open(work_dir.joinpath('params.yaml'), 'r') as foo:\n",
+    "with open(work_dir/'params.yaml', 'r') as foo:\n",
     "    desc_dict = yaml.safe_load(foo)\n",
     "desc_dicts = [d for d in desc_dict if 'soap' in d.keys()] # filtering out only SOAP descriptor\n",
     "per_atom = True\n",
     "for param in desc_dicts:\n",
-    "    if param.pop('average', False) == False:\n",
-    "        param['average']= True # to create global (per-conf) descriptors instead of local (per-atom)\n",
-    "        per_atom = False\n",
+    "    param['average']= True # to create global (per-conf) descriptors instead of local (per-atom)\n",
+    "    per_atom = False\n",
     "md_desc = calc_descriptors(inputs=md, outputs=md_desc, descs=desc_dicts, key='desc', per_atom=per_atom)\n",
     "\n",
     "# Step 2: Sampling\n",
-    "fps_out          = OutputSpec(files=work_dir.joinpath(\"out_fps.xyz\"))\n",
+    "fps_out          = OutputSpec(files=work_dir/\"out_fps.xyz\")\n",
     "nsamples         = 8\n",
     "selected_configs = greedy_fps_conf_global(inputs=md_desc, outputs=fps_out, num=nsamples, at_descs_info_key='desc', keep_descriptor_info=False)"
    ]
@@ -69,12 +68,11 @@
    "source": [
     "from ase.io import read\n",
     "\n",
-    "assert work_dir.joinpath('md_desc.xyz').exists()\n",
-    "assert work_dir.joinpath('out_fps.xyz').exists()\n",
+    "assert work_dir.joinpath('md_desc.xyz').is_file()\n",
+    "assert work_dir.joinpath('out_fps.xyz').is_file()\n",
     "\n",
-    "fps = read(work_dir.joinpath(\"out_fps.xyz\"), \":\")\n",
+    "fps = read(work_dir/(\"out_fps.xyz\"), \":\")\n",
     "assert len(fps) == nsamples\n",
-    "\n",
     "\n",
     "work_dir.joinpath('md_desc.xyz').unlink()\n",
     "work_dir.joinpath('out_fps.xyz').unlink()"
