--- a/docs/source/examples.fhiaims_calculator.ipynb
+++ b/docs/source/examples.fhiaims_calculator.ipynb
@@ -13,8 +13,6 @@
     "We also define an `OutputSpec` to handle the output that will additionally comprise values calculated by FHI-Aims.\\\n",
     "Next, we define various parameter that will be used during the calculations.\n",
     "Most of them define parameter settings for the DFT calculation (that will be written in the `control.in` input file of FHI-Aims).\n",
-    "Moreover, we set `get_k_grid` to a function `get_k_grid_ka_ge` (that we define in the upper part of the script). \n",
-    "In this way, the parameter `k_grid` defining the k-point grid in periodic FHI-Aims calculations will be set on-the-fly tailored to specific system (here based on the magnitude of the lattice parameter).\n",
     "Note that for non-periodic systems the calculations will be performed with the exact same settings, but without parameter specific to periodic systems (e.g. `k_grid`, `compute_analytical_stress`, etc.).\n",
     "The last parameter `calculator_exec` defines the command used to call FHI-Aims and start an individual calculation, including specifications for the parallelization of that specific calcuation and excluding any redirection of the output (i.e. without e.g. `>> aims.out`).\\\n",
     "Now we define a `calculator` of the form ` (calc_constructor, args, kwargs)` using the `Aims` calculator of Workflow and the parameter dictionary we have just defined.\n",
@@ -28,40 +26,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import pathlib\n",
     "\n",
+    "import wfl\n",
     "from wfl.calculators.aims import Aims\n",
     "from wfl.calculators import generic\n",
     "from wfl.autoparallelize.autoparainfo import AutoparaInfo\n",
     "from wfl.configset import ConfigSet, OutputSpec\n",
     "\n",
     "\n",
-    "\n",
-    "def get_k_grid_ka_ge(crystal, criterion=20):\n",
-    "    \"\"\"\n",
-    "    Estimate a k-points grid using the smallest integers\n",
-    "    satisfying <k_i> * <a_i> is greater than or equal to ```criterion```.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    crystal : (periodic) ase-Atoms object\n",
-    "        Storing the lattice parameter <a_i>.\n",
-    "    criterion: integer\n",
-    "        Defines the right-hand side of upper equation and,\n",
-    "        hence, how tight the k-points grid will be.\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    A string storing the k-points grid in the format '<k_1> <k_2> <k_3>'.\n",
-    "    \"\"\"\n",
-    "    return ' '.join([str(int(np.ceil(criterion / a_i)))\n",
-    "                     for a_i in np.linalg.norm(crystal.get_cell(), axis=1)])\n",
-    "\n",
-    "\n",
     "workdir = pathlib.Path(wfl.__file__).parents[1]/\"docs/source/examples_files/fhiaims_calculator\"\n",
     "inputs = ConfigSet(workdir/'./Input_Structures.xyz')\n",
-    "outputs = OutputSpec(workdir/'Output_Structures.xyz')\n",
+    "outputs = OutputSpec('Output_Structures.xyz')\n",
     "\n",
     "aims_kwargs = {\n",
     "        'xc':                        'pbe',\n",
@@ -76,14 +52,13 @@
     "        'sc_accuracy_rho':           1e-2,\n",
     "        'sc_accuracy_eev':           1e-2,\n",
     "        'sc_accuracy_etot':          1e-4,\n",
-    "        'sc_accuracy_forces':        1E-2,\n",
+    "        'sc_accuracy_forces':        1e-2,\n",
     "        'sc_accuracy_stress':        1e-1,\n",
     "        'compute_forces':            True,\n",
     "        'compute_analytical_stress': True,\n",
     "        'KS_method':                 'parallel',\n",
-    "        'get_k_grid':                get_k_grid_ka_ge,\n",
-    "        'calculator_exec':           'srun -n2 --exclusive --mem=10GB'\n",
-    "                                     ' /u/swengert/opt/bin/aims.210313.scalapack.mpi.x',\n",
+    "        'k_grid_density':            1e-1,\n",
+    "        'calculator_exec':           'srun -n2 --exclusive --mem=2GB aims.210313.scalapack.mpi.x',\n",
     "        }\n",
     "\n",
     "\n",
@@ -97,8 +72,8 @@
     "    properties = [\"energy\", \"forces\", \"stress\"],\n",
     "    output_prefix = \"FHIaims_\",\n",
     "    autopara_info = AutoparaInfo(\n",
-    "        num_python_subprocesses = 5,\n",
-    "        num_inputs_per_python_subprocess=2\n",
+    "        num_python_subprocesses = 4,\n",
+    "        num_inputs_per_python_subprocess=1\n",
     "    )\n",
     ")"
    ]
@@ -107,16 +82,20 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3b2ea6aa-299e-4834-b6cf-a3718462b0a4",
-   "metadata": {"nbsphinx": "hidden"},
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
    "outputs": [],
    "source": [
+    "import os\n",
     "import ase.io\n",
     "\n",
     "\n",
-    "assert len(list(outputs)) == len(inputs)\n",
-    "assert os.path.exists(outputspec.files[0]), f'{outputspec.files[0]} not found!'\n",
-    "for atoms_i in ase.io.read(outputspec.files[0], ':'):\n",
-    "    assert not atoms_i.info.get('DFT_FAILED_AIMS', False), f'Calculation with ID_mol={atoms_i.info[\"ID_mol\"]} failed.'"
+    "assert os.path.exists(outputs.files[0]), f'{outputs.files[0]} not found!'\n",
+    "outputs_atoms = ase.io.read(outputs.files[0], ':')\n",
+    "assert len(list(outputs_atoms)) == len(list(inputs))\n",
+    "for atoms_i in outputs_atoms:\n",
+    "    assert not atoms_i.info.get('DFT_FAILED_AIMS', False), f'Calculation with ID_mol={atoms_i.info[\"ID_mol\"]} failed.'\n"
    ]
   }
  ],
