initial review feedback

--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -22,6 +22,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -54,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +99,7 @@
    "source": [
     "## Reference calculator \n",
     "\n",
-    "To parallelise (non-file-based) calculators, they need to be given to workflow functions as \n",
+    "The calculator object given to `autoparalellize`-wrapped functions need to be pickle-able, so it can be executed on the parallel Python subprocesses with `multiprocessing.pool`. The calculators that can't be pickled need to be given to workflow functions as \n",
     "\n",
     "`(Initalizer, [args], {kwargs})`\n",
     "\n",
@@ -238,11 +245,26 @@
     "    \"check_interval\": 5,\n",
     "    \"num_inputs_per_queued_job\" :20,\n",
     "    \"pre_cmds\" :[\"conda activate dev\"]\n",
-    "}\n",
-    "\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# set to None for github testing purposes\n",
-    "remote_info=None\n",
-    "\n",
+    "# This cell is hidden from being rendered in the docs. \n",
+    "remote_info = None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "inputs = md.sample(\n",
     "    inputs=inputs, \n",
     "    outputs=outputs,\n",
@@ -493,11 +515,26 @@
     "    \"partial_node\": True,\n",
     "    \"check_interval\": 5, \n",
     "    \"pre_cmds\" :[\"conda activate dev\"],\n",
-    "}\n",
-    "\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# set to None for github testing purposes\n",
-    "remote_info = None\n",
-    "\n",
+    "# This cell is hidden from being rendered in the docs. \n",
+    "remote_info = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if not Path(gap_fname).exists(): \n",
     "    wfl.fit.gap.simple.run_gap_fit(\n",
     "        fitting_configs=ConfigSet(train_fname),\n",
@@ -566,9 +603,26 @@
     "    partial_node = True,\n",
     "    check_interval=10, \n",
     "    input_files=[\"gap.xml*\"], \n",
-    "    pre_cmds = [\"conda activate dev\"])\n",
-    "\n",
-    "remote_info = None\n",
+    "    pre_cmds = [\"conda activate dev\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set remote_info to None so that this can run on GitHub CI. \n",
+    "# This cell is hidden from being rendered in the docs. \n",
+    "remote_info = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "gap_calc_autopara_info = AutoparaInfo(\n",
     "    remote_info=remote_info)\n",
@@ -687,7 +741,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {"nbsphinx": "hidden"},
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
