added map function

--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -88,6 +88,7 @@
     "from wfl.utils.configs import atomization_energy\n",
     "from wfl.fit import error\n",
     "from wfl.select.simple import by_bool_func\n",
+    "import wfl.map\n",
     "\n",
     "from expyre.resources import Resources"
    ]
@@ -146,16 +147,35 @@
     "    calculator=xtb_calc,\n",
     "    properties=[\"energy\"],\n",
     "    output_prefix=\"xtb_\"\n",
-    ")\n",
-    "\n",
-    "outputs = OutputSpec(isolated_at_fname)\n",
-    "for at in inputs:\n",
+    ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Modify cell and add tag with a convenience map function that executes given `map_func` over all atoms. `wfl.map.run` is `autoparalellize`-wrapped, so is parallelizable and works with `ConfigSet` & `OutputSpec`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def modify_isolated_at(at):\n",
     "    # GAP needs a cell for fitting, even for non-periodic structures.\n",
-    "    at.cell = [50,50,50]\n",
+    "    at.cell = [50, 50, 50]\n",
     "    # set config_type for `gap_fit` to recognise the appropriate frames.  \n",
     "    at.info[\"config_type\"] = \"isolated_atom\"\n",
-    "    outputs.store(at)\n",
-    "outputs.close()"
+    "    return at\n",
+    "\n",
+    "outputs = OutputSpec(isolated_at_fname)\n",
+    "wfl.map.run(\n",
+    "    inputs=isolated_atoms,\n",
+    "    outputs=outputs,\n",
+    "    map_func = modify_isolated_at)\n"
    ]
   },
   {
@@ -237,7 +257,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {"nbsphinx": "hidden"},
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
    "outputs": [],
    "source": [
     "# set to None for github testing purposes\n",
@@ -280,7 +302,7 @@
     "\n",
     "def are_xtb_force_comps_reasonable(at):\n",
     "    force_comps = at.arrays[\"xtb_forces\"]\n",
-    "    return np.all(np.abs(force_comps) < 8 )\n",
+    "    return np.all(np.linalg.norm(force_comps, axis=1) <8)\n",
     "\n",
     "outputs = OutputSpec(\"3.ch.rdkit.md.traj.filtered.xyz\") \n",
     "md_sample_filtered = by_bool_func(\n",
@@ -309,7 +331,7 @@
     "\n",
     "# a nice feature of `ConfigSet`: \n",
     "# can check if output from this step is already created and not re-execute it\n",
-    "if outputs.done():\n",
+    "if outputs.all_written():\n",
     "    print(\"Not calculating SOAP, because output file is found\")\n",
     "    inputs = outputs.to_ConfigSet()\n",
     "else:\n",
@@ -336,15 +358,20 @@
     "        per_atom=True\n",
     "    )\n",
     "\n",
-    "    # make global average descriptor out of local ones\n",
-    "    for at in md_soap_local:\n",
+    "\n",
+    "    def get_average_soap(at, descriptor_key):\n",
     "        at_desc = at.arrays.pop(descriptor_key)\n",
     "        at_desc = np.sum(at_desc, axis=0)\n",
     "        at_desc /= np.linalg.norm(at_desc)\n",
-    "        at.info[descriptor_key] = at_desc\n",
-    "        outputs.store(at)\n",
-    "    outputs.close()\n",
-    "    md_soap_global = outputs.to_ConfigSet()"
+    "        at.info[descriptor_key] = at_desc \n",
+    "        return at\n",
+    "\n",
+    "    md_soap_global = wfl.map.run(\n",
+    "        inputs = md_soap_local,\n",
+    "        outputs = outputs, \n",
+    "        map_func = get_average_soap, \n",
+    "        args = [descriptor_key]\n",
+    "    )"
    ]
   },
   {
@@ -465,27 +492,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {"nbsphinx": "hidden"},
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
    "outputs": [],
    "source": [
     "# set to None for github testing purposes\n",
     "# This cell is hidden from being rendered in the docs. \n",
     "remote_info = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if not Path(gap_fname).exists(): \n",
-    "    wfl.fit.gap.simple.run_gap_fit(\n",
-    "        fitting_configs=ConfigSet(train_fname),\n",
-    "        fitting_dict=gap_params,\n",
-    "        stdout_file='gap_fit.out',\n",
-    "        remote_info=remote_info\n",
-    ")"
    ]
   },
   {
@@ -529,7 +543,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {"nbsphinx": "hidden"},
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
    "outputs": [],
    "source": [
     "# Set remote_info to None so that this can run on GitHub CI. \n",
@@ -658,13 +674,6 @@
     "    # print(file)\n",
     "    assert Path(file).exists()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
