more feedback from review

--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -151,14 +151,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Modify cell and add tag with a convenience map function that executes given `map_func` over all atoms. `wfl.map.run` is `autoparalellize`-wrapped, so is parallelizable and works with `ConfigSet` & `OutputSpec`."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -500,6 +492,20 @@
     "# set to None for github testing purposes\n",
     "# This cell is hidden from being rendered in the docs. \n",
     "remote_info = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not Path(gap_fname).exists(): \n",
+    "    wfl.fit.gap.simple.run_gap_fit(\n",
+    "        fitting_configs=ConfigSet(train_fname),\n",
+    "        fitting_dict=gap_params,\n",
+    "        stdout_file='gap_fit.out',\n",
+    "        remote_info=remote_info)"
    ]
   },
   {
