more feedback from review

--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -66,8 +66,6 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from pathlib import Path\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "from ase.io import read, write\n",
     "from ase import Atoms\n",
@@ -318,52 +316,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tmp_outputs = OutputSpec()\n",
-    "outputs = OutputSpec(\"4.ch.rdkit.md.traj.filtered.soap.xyz\")\n",
+    "outputs = OutputSpec(\"4.ch.rdkit.md.traj.filtered.local_soap.xyz\")\n",
     "\n",
-    "# a nice feature of `ConfigSet`: \n",
-    "# can check if output from this step is already created and not re-execute it\n",
-    "if outputs.all_written():\n",
-    "    print(\"Not calculating SOAP, because output file is found\")\n",
-    "    inputs = outputs.to_ConfigSet()\n",
-    "else:\n",
-    "    descriptor_key = \"SOAP\"\n",
-    "    # Descriptor string, just as it would go into quip.\n",
-    "    # dictionary can have a descriptor per species, e.g. \n",
-    "    # descriptor = {\n",
-    "    #   \"H\": \"soap ...\",\n",
-    "    #   \"C\": \"soap ...\"}\n",
-    "    # `None` for dictionary keys just means that the same descriptor is used \n",
-    "    # for all elements. \n",
-    "    descriptor =   {\n",
-    "            None: \"soap l_max=3 n_max=6 cutoff=4 delta=1 covariance_type=dot_product zeta=4 atom_gaussian_width=0.3\"\n",
-    "        }\n",
+    "descriptor_key = \"SOAP\"\n",
+    "# Descriptor string, just as it would go into quip.\n",
+    "# dictionary can have a descriptor per species, e.g. \n",
+    "# descriptor = {\n",
+    "#   \"H\": \"soap ...\",\n",
+    "#   \"C\": \"soap ...\"}\n",
+    "# `None` for dictionary keys just means that the same descriptor is used \n",
+    "# for all elements. \n",
+    "descriptor =   {\n",
+    "        None: \"soap l_max=3 n_max=6 cutoff=4 delta=1 covariance_type=dot_product zeta=4 atom_gaussian_width=0.3\"\n",
+    "    }\n",
     "\n",
-    "    # this function isn't parallelised here, but can be\n",
-    "    # by setting WFL_NUM_PYTHON_SUBPROCESSES or\n",
-    "    # WFL_EXPYRE_INFO\n",
-    "    md_soap_local = wfl.descriptors.quippy.calc(\n",
-    "        inputs=md_sample_filtered,\n",
-    "        outputs=tmp_outputs,\n",
-    "        descs=descriptor,\n",
-    "        key=descriptor_key,\n",
-    "        per_atom=True\n",
-    "    )\n",
+    "# this function isn't parallelised here, but can be\n",
+    "# by setting WFL_NUM_PYTHON_SUBPROCESSES or\n",
+    "# WFL_EXPYRE_INFO\n",
+    "md_soap_local = wfl.descriptors.quippy.calc(\n",
+    "    inputs=md_sample_filtered,\n",
+    "    outputs=outputs,\n",
+    "    descs=descriptor,\n",
+    "    key=descriptor_key,\n",
+    "    per_atom=True\n",
+    ")\n",
     "\n",
+    "def get_average_soap(at, descriptor_key):\n",
+    "    at_desc = at.arrays.pop(descriptor_key)\n",
+    "    at_desc = np.sum(at_desc, axis=0)\n",
+    "    at_desc /= np.linalg.norm(at_desc)\n",
+    "    at.info[descriptor_key] = at_desc \n",
+    "    return at\n",
     "\n",
-    "    def get_average_soap(at, descriptor_key):\n",
-    "        at_desc = at.arrays.pop(descriptor_key)\n",
-    "        at_desc = np.sum(at_desc, axis=0)\n",
-    "        at_desc /= np.linalg.norm(at_desc)\n",
-    "        at.info[descriptor_key] = at_desc \n",
-    "        return at\n",
-    "\n",
-    "    md_soap_global = wfl.map.run(\n",
-    "        inputs = md_soap_local,\n",
-    "        outputs = outputs, \n",
-    "        map_func = get_average_soap, \n",
-    "        args = [descriptor_key]\n",
-    "    )"
+    "md_soap_global = wfl.map.run(\n",
+    "    inputs = md_soap_local,\n",
+    "    outputs = OutputSpec(), \n",
+    "    map_func = get_average_soap, \n",
+    "    args = [descriptor_key])"
    ]
   },
   {
@@ -484,9 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "nbsphinx": "hidden"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# set to None for github testing purposes\n",
@@ -500,12 +487,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not Path(gap_fname).exists(): \n",
-    "    wfl.fit.gap.simple.run_gap_fit(\n",
-    "        fitting_configs=ConfigSet(train_fname),\n",
-    "        fitting_dict=gap_params,\n",
-    "        stdout_file='gap_fit.out',\n",
-    "        remote_info=remote_info)"
+    "wfl.fit.gap.simple.run_gap_fit(\n",
+    "    fitting_configs=ConfigSet(train_fname),\n",
+    "    fitting_dict=gap_params,\n",
+    "    stdout_file='gap_fit.out',\n",
+    "    skip_if_present=True,\n",
+    "    remote_info=remote_info)"
    ]
   },
   {
