filter out trajectory on the go

--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -22,13 +22,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -209,9 +202,10 @@
    "source": [
     "## Run Molecular Dynamics simulation\n",
     "\n",
-    "We run the MD at 300 K with an NVT Berendsen thermostat. \n",
+    "We run the MD at 300 K with an NVT Berendsen thermostat to collect a pool of structures from which we will select diverse structures for the training set. \n",
     "\n",
-    " TODO: how do we manage remote execution examples code-testing-wise?"
+    "\n",
+    "While diverse training set leads to better model extrapolation, structures too dissimilar to the region of interest are fitted at the expense of accuracy elsewhere. One way to spot structures somewhat distant from equilibrium is by checking for high force components. To do so we attach a selector function which will exclude unreasonable structures from those returned by the md script. "
    ]
   },
   {
@@ -263,43 +257,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def are_xtb_forces_reasonable(at):\n",
+    "    force_comps = at.get_forces()\n",
+    "    return np.all(np.linalg.norm(force_comps, axis=1) < 8)\n",
+    "\n",
     "md_sample = md.sample(\n",
     "    inputs=smiles_configs, \n",
     "    outputs=outputs,\n",
     "    calculator=xtb_calc,\n",
+    "    traj_select_during_func = are_xtb_forces_reasonable, \n",
     "    autopara_info = AutoparaInfo(\n",
     "        remote_info=remote_info),\n",
     "    **md_params\n",
     "    )\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Filter out unreasonable structures\n",
-    "\n",
-    "While diverse training set leads to better model extrapolation, structures too dissimilar to the region of interest are fitted at the expense of accuracy elsewhere. One way to spot structures somewhat distant from equilibrium is by checking for high force components. Below we exclude such structures via one of wfl's filtering functions. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def are_xtb_force_comps_reasonable(at):\n",
-    "    force_comps = at.arrays[\"xtb_forces\"]\n",
-    "    return np.all(np.linalg.norm(force_comps, axis=1) <8)\n",
-    "\n",
-    "outputs = OutputSpec(\"3.ch.rdkit.md.traj.filtered.xyz\") \n",
-    "md_sample_filtered = by_bool_func(\n",
-    "    inputs = md_sample, \n",
-    "    outputs = outputs,\n",
-    "    at_filter = are_xtb_force_comps_reasonable\n",
-    ")\n"
    ]
   },
   {
@@ -316,7 +286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outputs = OutputSpec(\"4.ch.rdkit.md.traj.filtered.local_soap.xyz\")\n",
+    "outputs = OutputSpec(\"3.ch.rdkit.md.traj.local_soap.xyz\")\n",
     "\n",
     "descriptor_key = \"SOAP\"\n",
     "# Descriptor string, just as it would go into quip.\n",
@@ -334,7 +304,7 @@
     "# by setting WFL_NUM_PYTHON_SUBPROCESSES or\n",
     "# WFL_EXPYRE_INFO\n",
     "md_soap_local = wfl.descriptors.quippy.calc(\n",
-    "    inputs=md_sample_filtered,\n",
+    "    inputs=md_sample,\n",
     "    outputs=outputs,\n",
     "    descs=descriptor,\n",
     "    key=descriptor_key,\n",
@@ -371,13 +341,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outputs = OutputSpec(\"5.ch.rdkit.md.traj.soap.cur_selection.xyz\")\n",
+    "outputs = OutputSpec(\"4.ch.rdkit.md.traj.soap.cur_selection.xyz\")\n",
     "cur_selection = wfl.select.by_descriptor.CUR_conf_global(\n",
     "    inputs=md_soap_global,\n",
     "    outputs=outputs,\n",
     "    num=100,                    # target number of structures to pick\n",
-    "    at_descs_info_key=\"SOAP\"\n",
-    ")\n",
+    "    at_descs_info_key=\"SOAP\")\n",
+    "    \n",
     "\n",
     "train_fname = \"6.1.train.xyz\"\n",
     "test_fname = \"6.2.test.xyz\"\n",
