random seed and testing rmses

--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -30,6 +30,7 @@
     "\n",
     "In addition to standard packages or wfl dependencies, we make use of three external packages: \n",
     "\n",
+    "\n",
     "- quip and quippy which provide interface for fitting and evaluating GAP. \n",
     "  \n",
     "  Documentation: https://pypi.org/project/quippy-ase/ \n",
@@ -78,10 +79,20 @@
     "from wfl.generate import smiles\n",
     "from wfl.utils.configs import atomization_energy\n",
     "from wfl.fit import error\n",
-    "from wfl.select.simple import by_bool_func\n",
     "import wfl.map\n",
     "\n",
     "from expyre.resources import Resources"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set random seed, so that MD runs, etc are reproducible and we can check for RMSEs. \n",
+    "# this cell is hidden from tutorials. \n",
+    "np.random.seed(20230301)"
    ]
   },
   {
@@ -349,8 +360,8 @@
     "    at_descs_info_key=\"SOAP\")\n",
     "    \n",
     "\n",
-    "train_fname = \"6.1.train.xyz\"\n",
-    "test_fname = \"6.2.test.xyz\"\n",
+    "train_fname = \"5.1.train.xyz\"\n",
+    "test_fname = \"5.2.test.xyz\"\n",
     "gap_fname='gap.xml'\n",
     "\n",
     "# process configs before fitting\n",
@@ -448,7 +459,8 @@
    "source": [
     "# set to None for github testing purposes\n",
     "# This cell is hidden from being rendered in the docs. \n",
-    "remote_info = None"
+    "remote_info = None\n",
+    "gap_params[\"rnd_seed\"] = 20230301"
    ]
   },
   {
@@ -479,8 +491,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_fn_with_gap = \"7.1.train.gap.xyz\"\n",
-    "test_fn_with_gap = \"7.2.test.gap.xyz\"\n",
+    "train_fn_with_gap = \"6.1.train.gap.xyz\"\n",
+    "test_fn_with_gap = \"6.2.test.gap.xyz\"\n",
     "isolated_at_fn_with_gap = isolated_at_fname.replace('.xyz', '.gap.xyz')\n",
     "\n",
     "inputs = ConfigSet([train_fname, test_fname, isolated_at_fname])\n",
@@ -552,8 +564,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_ae_fn = \"8.1.train.gap.ae.xyz\"\n",
-    "test_ae_fn = \"8.2.test.gap.ae.xyz\"\n",
+    "train_ae_fn = \"7.1.train.gap.ae.xyz\"\n",
+    "test_ae_fn = \"7.2.test.gap.ae.xyz\"\n",
     "\n",
     "for label, ae_fn, fn in zip([\"train\", \"test\"], [train_ae_fn, test_ae_fn], [train_fn_with_gap, test_fn_with_gap]):\n",
     "\n",
@@ -592,7 +604,7 @@
     "    config_properties=[\"atomization_energy/atom\"],\n",
     "    atom_properties=[\"forces/comp\"])\n",
     "\n",
-    "print(error.errors_dumps(errors))\n",
+    "print(error.errors_dumps(errors, precision=7))\n",
     "\n",
     "error.value_error_scatter(\n",
     "    all_errors = errors, \n",
@@ -613,6 +625,7 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
+    "from pytest import approx\n",
     "\n",
     "# just check that all the files are there, so all steps completed (successfully). \n",
     "\n",
@@ -620,23 +633,46 @@
     "    \"isolated_atoms.xtb.xyz\",\n",
     "    \"1.ch.rdkit.xyz\",\n",
     "    \"2.ch.rdkit.md.traj.xyz\",\n",
-    "    \"3.ch.rdkit.md.traj.filtered.xyz\",\n",
-    "    \"4.ch.rdkit.md.traj.filtered.soap.xyz\",\n",
-    "    \"5.ch.rdkit.md.traj.soap.cur_selection.xyz\",\n",
-    "    \"6.1.train.xyz\",\n",
-    "    \"6.2.test.xyz\",\n",
+    "    \"3.ch.rdkit.md.traj.local_soap.xyz\",\n",
+    "    \"4.ch.rdkit.md.traj.soap.cur_selection.xyz\",\n",
+    "    \"5.1.train.xyz\",\n",
+    "    \"5.2.test.xyz\",\n",
     "    \"gap.xml\",\n",
-    "    \"7.1.train.gap.xyz\",\n",
-    "    \"7.2.test.gap.xyz\",\n",
-    "    \"8.1.train.gap.ae.xyz\",\n",
-    "    \"8.2.test.gap.ae.xyz\",\n",
+    "    \"6.1.train.gap.xyz\",\n",
+    "    \"6.2.test.gap.xyz\",\n",
+    "    \"7.1.train.gap.ae.xyz\",\n",
+    "    \"7.2.test.gap.ae.xyz\",\n",
     "    \"gap_rmses.png\"\n",
     "]\n",
     "\n",
     "for file in expected_files:\n",
     "    # print(file)\n",
-    "    assert Path(file).exists()"
+    "    assert Path(file).exists()\n",
+    "\n",
+    "\n",
+    "ref_errors = {\n",
+    "    'atomization_energy/atom': {\n",
+    "        'train': {'RMSE': 0.014974721709894103, 'MAE': 0.012622912654390177, 'count': 50},\n",
+    "        '_ALL_': {'RMSE': 0.0162006675210473, 'MAE': 0.012965381227878527, 'count': 100},\n",
+    "        'test': {'RMSE': 0.017340154727287182, 'MAE': 0.013307849801366877, 'count': 50}},\n",
+    "    'forces/comp': {\n",
+    "        'train': {'RMSE': 0.6213796984853067, 'MAE': 0.4465803716686252, 'count': 5106},\n",
+    "        '_ALL_': {'RMSE': 0.6321592191859141, 'MAE': 0.4509735702456762, 'count': 10176},\n",
+    "        'test': {'RMSE': 0.6428326175648255, 'MAE': 0.45539796313214986, 'count': 5070}}}\n",
+    "\n",
+    "\n",
+    "for prop_key, prop_dict in ref_errors.items():\n",
+    "    for config_key, config_dict in prop_dict.items():\n",
+    "        for measure_key, val in config_dict.items():\n",
+    "            assert val == approx(errors[prop_key][config_key][measure_key])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
