use wfl.map more often

--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -139,36 +139,26 @@
    "outputs": [],
    "source": [
     "isolated_at_fname='isolated_atoms.xtb.xyz'\n",
-    "isolated_atoms = [Atoms(element, positions=[(0, 0, 0)]) for element in [\"H\", \"C\"]]\n",
+    "isolated_atoms = [Atoms(element, positions=[(0, 0, 0)], cell=[50, 50, 50]) for element in [\"H\", \"C\"]]\n",
     "inputs = ConfigSet(isolated_atoms)\n",
-    "outputs = OutputSpec()\n",
     "\n",
+    "# calculate reference energy\n",
     "isolated_atoms = generic.run(\n",
     "    inputs=inputs,\n",
-    "    outputs=outputs,\n",
+    "    outputs=OutputSpec(),\n",
     "    calculator=xtb_calc,\n",
     "    properties=[\"energy\"],\n",
     "    output_prefix=\"xtb_\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ")\n",
+    "\n",
+    "# set tag for fitting GAP\n",
     "def modify_isolated_at(at):\n",
-    "    # GAP needs a cell for fitting, even for non-periodic structures.\n",
-    "    at.cell = [50, 50, 50]\n",
-    "    # set config_type for `gap_fit` to recognise the appropriate frames.  \n",
     "    at.info[\"config_type\"] = \"isolated_atom\"\n",
     "    return at\n",
-    "\n",
-    "outputs = OutputSpec(isolated_at_fname)\n",
+    " \n",
     "wfl.map.run(\n",
     "    inputs=isolated_atoms,\n",
-    "    outputs=outputs,\n",
+    "    outputs=OutputSpec(isolated_at_fname),\n",
     "    map_func = modify_isolated_at)\n"
    ]
   },
@@ -364,19 +354,54 @@
     "test_fname = \"5.2.test.xyz\"\n",
     "gap_fname='gap.xml'\n",
     "\n",
-    "# process configs before fitting\n",
-    "cur_selection = list(cur_selection)\n",
-    "for at in cur_selection:\n",
-    "\n",
-    "    # set the cell for gap_fit\n",
+    "def process(at):\n",
     "    at.cell = [50, 50, 50]\n",
-    "\n",
-    "    # gap_fit cannot parse the xyz correctly with the SOAP descriptor\n",
-    "    # in the info line, so let's delete it\n",
     "    del at.info[\"SOAP\"]\n",
+    "    return at\n",
     "\n",
-    "write(train_fname, cur_selection[0::2] + read(isolated_at_fname, \":\"))\n",
-    "write(test_fname, cur_selection[1::2])"
+    "\n",
+    "processed_cur_selection = wfl.map.run(\n",
+    "    cur_selection,\n",
+    "    OutputSpec(),\n",
+    "    map_func = process)\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "label and save training and testing sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_inputs = ConfigSet([list(processed_cur_selection)[0::2], read(isolated_at_fname, \":\")])\n",
+    "test_inputs = ConfigSet(list(processed_cur_selection)[1::2])\n",
+    "\n",
+    "def tag(at, label):\n",
+    "    # let's not overwrite isolated atoms label\n",
+    "    if at.info[\"config_type\"] != \"isolated_atom\":\n",
+    "        at.info[\"config_type\"] = label\n",
+    "    return at\n",
+    "\n",
+    "train_set = wfl.map.run(\n",
+    "    train_inputs,\n",
+    "    OutputSpec(train_fname),\n",
+    "    map_func = tag, \n",
+    "    args = [\"train\"])\n",
+    "\n",
+    "test_set = wfl.map.run(\n",
+    "    test_inputs,\n",
+    "    OutputSpec(test_fname),\n",
+    "    map_func = tag,\n",
+    "    args = [\"test\"]\n",
+    ")\n"
    ]
   },
   {
@@ -470,7 +495,7 @@
    "outputs": [],
    "source": [
     "wfl.fit.gap.simple.run_gap_fit(\n",
-    "    fitting_configs=ConfigSet(train_fname),\n",
+    "    fitting_configs=train_set,\n",
     "    fitting_dict=gap_params,\n",
     "    stdout_file='gap_fit.out',\n",
     "    skip_if_present=True,\n",
@@ -564,39 +589,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_ae_fn = \"7.1.train.gap.ae.xyz\"\n",
-    "test_ae_fn = \"7.2.test.gap.ae.xyz\"\n",
+    "# calculate atomization energies\n",
     "\n",
-    "for label, ae_fn, fn in zip([\"train\", \"test\"], [train_ae_fn, test_ae_fn], [train_fn_with_gap, test_fn_with_gap]):\n",
+    "train_set = ConfigSet(train_fn_with_gap)\n",
+    "for prop_prefix in [\"xtb_\", \"gap_\"]:\n",
+    "    train_set = atomization_energy(\n",
+    "        inputs=train_set, \n",
+    "        outputs=OutputSpec(train_fn_with_gap, overwrite=True), \n",
+    "        prop_prefix=prop_prefix) \n",
     "\n",
-    "    if label == \"test\":\n",
-    "        inputs = ConfigSet([fn, isolated_at_fn_with_gap])\n",
-    "    else:\n",
-    "        inputs = ConfigSet(fn)\n",
-    "    outputs = OutputSpec()\n",
     "\n",
-    "    inputs = atomization_energy(\n",
-    "        inputs=inputs, \n",
-    "        outputs=outputs, \n",
-    "        prop_prefix=\"xtb_\")\n",
+    "test_set = ConfigSet([test_fn_with_gap, isolated_at_fn_with_gap])\n",
+    "for prop_prefix in [\"xtb_\", \"gap_\"]:\n",
+    "    test_set = atomization_energy(\n",
+    "        inputs=test_set, \n",
+    "        outputs=OutputSpec(test_fn_with_gap, overwrite=True), \n",
+    "        prop_prefix=prop_prefix) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# filter out isolated atoms for plotting purposes\n",
+    "train_set = [at for at in train_set if at.info[\"config_type\"] != \"isolated_atom\"]\n",
+    "test_set = [at for at in test_set if at.info[\"config_type\"] != \"isolated_atom\"]\n",
     "\n",
-    "    outputs = OutputSpec(ae_fn)\n",
-    "    inputs = atomization_energy(\n",
-    "        inputs=inputs, \n",
-    "        outputs=outputs, \n",
-    "        prop_prefix=\"gap_\")\n",
-    "\n",
-    "    ats = read(ae_fn, \":\")\n",
-    "    ats_out = []\n",
-    "    for at in ats:\n",
-    "        if at.info[\"config_type\"] == \"isolated_atom\":\n",
-    "            continue\n",
-    "        at.info[\"config_type\"] = label\n",
-    "        ats_out.append(at)\n",
-    "    write(ae_fn, ats_out)\n",
-    "\n",
-    "inputs = ConfigSet([train_ae_fn, test_ae_fn])\n",
-    "\n",
+    "# calculate errors\n",
+    "inputs = ConfigSet([train_set, test_set])\n",
     "errors, diffs, parity = error.calc(\n",
     "    inputs=inputs, \n",
     "    calc_property_prefix='gap_',\n",
@@ -604,8 +626,9 @@
     "    config_properties=[\"atomization_energy/atom\"],\n",
     "    atom_properties=[\"forces/comp\"])\n",
     "\n",
-    "print(error.errors_dumps(errors, precision=7))\n",
+    "print(error.errors_dumps(errors))\n",
     "\n",
+    "# plot parity and error plots\n",
     "error.value_error_scatter(\n",
     "    all_errors = errors, \n",
     "    all_diffs=diffs,\n",
@@ -640,13 +663,11 @@
     "    \"gap.xml\",\n",
     "    \"6.1.train.gap.xyz\",\n",
     "    \"6.2.test.gap.xyz\",\n",
-    "    \"7.1.train.gap.ae.xyz\",\n",
-    "    \"7.2.test.gap.ae.xyz\",\n",
     "    \"gap_rmses.png\"\n",
     "]\n",
     "\n",
     "for file in expected_files:\n",
-    "    # print(file)\n",
+    "    print(file)\n",
     "    assert Path(file).exists()\n",
     "\n",
     "\n",
