fit.gap.simple better file skipping

--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -258,7 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def are_xtb_forces_reasonable(at):\n",
+    "def reasonable_forces(at):\n",
     "    force_comps = at.get_forces()\n",
     "    return np.all(np.linalg.norm(force_comps, axis=1) < 8)\n",
     "\n",
@@ -266,7 +266,7 @@
     "    inputs=smiles_configs, \n",
     "    outputs=outputs,\n",
     "    calculator=xtb_calc,\n",
-    "    traj_select_during_func = are_xtb_forces_reasonable, \n",
+    "    traj_select_during_func = reasonable_forces, \n",
     "    autopara_info = AutoparaInfo(\n",
     "        remote_info=remote_info),\n",
     "    **md_params\n",
